--- a/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
@@ -1,17 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamarinApp.Pages.LoginPage"
-             Title="Hhellow">
+             x:Class="XamarinApp.Pages.LoginPage">
   
   <StackLayout Padding="30" BackgroundColor="#222">
-    <Image Source="http://www.medexp.com.mx/Static/Imgs/logo.png" 
-           HorizontalOptions="Center" HeightRequest="180"  />
+    <Image Source="http://www.medexp.com.mx/Static/Imgs/logo.png" HorizontalOptions="Center" HeightRequest="180"  />
     <Label Text="Username" TextColor="White" />
-    <Entry x:Name="Username" />
+    <Entry x:Name="Username" BackgroundColor="#222" TextColor="#fff" />
     <Label Text="Password" TextColor="White" />
-    <Entry x:Name="Password" IsPassword="True" />
-    <Button Text="Sign In" HorizontalOptions="Center" />
+    <Entry x:Name="Password" IsPassword="True" BackgroundColor="#222" TextColor="#fff" />
+    <Button Text="Sign In" HorizontalOptions="Center" Clicked="SignInPressed" />
   </StackLayout>
   
 </ContentPage>
