Color al boton de eliminado

--- a/AppXamarin/XamarinApp/XamarinApp/Pages/MainPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/MainPage.xaml
@@ -11,8 +11,8 @@
           <ViewCell>
             <ViewCell.ContextActions>
               <MenuItem Text="Delete"
-                          Clicked="Delete_OnClicked"
-                          CommandParameter="{Binding AppoimentTitle}"/>
+                          Clicked="Delete_OnClicked" IsDestructive="True"
+                          CommandParameter="{Binding AppoimentTitle}" />
             </ViewCell.ContextActions>
             <StackLayout Orientation="Vertical" Spacing="50">
               <StackLayout Orientation="Horizontal" Padding="20,0" >
