--- a/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
@@ -2,6 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Pages.LoginPage">
+  <ContentPage.Resources>
+    <ResourceDictionary>
+      <OnPlatform x:Key="standardFont" x:TypeArguments="Font">
+        <OnPlatform.iOS>12</OnPlatform.iOS>
+        <OnPlatform.Android>12</OnPlatform.Android>
+        <OnPlatform.WinPhone>18</OnPlatform.WinPhone>
+      </OnPlatform>
+    </ResourceDictionary>
+  </ContentPage.Resources>
+  
   <ScrollView>
     <StackLayout Padding="30" BackgroundColor="#222">
       <Image Source="http://www.medexp.com.mx/Static/Imgs/logo.png" HorizontalOptions="Center" HeightRequest="180"  />
