--- a/AppXamarin/XamarinApp/XamarinApp/Pages/MainPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/MainPage.xaml
@@ -10,6 +10,8 @@
         <DataTemplate>
           <ViewCell>
             <ViewCell.ContextActions>
+              <MenuItem Text="Info"
+                        Clicked="OnItemSelected"/>
               <MenuItem Text="Delete"
                           Clicked="Delete_OnClicked"
                           IsDestructive="True"
