--- a/AppXamarin/XamarinApp/XamarinApp/Pages/InformationPageModal.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/InformationPageModal.xaml
@@ -7,11 +7,7 @@
   </ContentPage.Padding>
   <ContentPage.Content>
     <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-      <StackLayout Orientation="Horizontal">
-        <Label Text="Name:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
-        <Label Text="{Binding user.Name}" FontSize="Medium" FontAttributes="Bold" />
-      </StackLayout>
-      <Button x:Name="dismissButton" Text="Dismiss" Clicked="OnDismissButtonClicked" />
+      <Button x:Name="dismissButton" Text="Aceptar" Clicked="OnDismissButtonClicked" />
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
