--- a/AppXamarin/XamarinApp/XamarinApp/Pages/UserInformationPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/UserInformationPage.xaml
@@ -3,6 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Pages.UserInformationPage"
              Title="Informacion de usuario">
+  <ContentPage.Padding>
+    <OnPlatform x:TypeArguments="Thickness" iOS="0,40,0,0" />
+  </ContentPage.Padding>
+  <ContentPage.Content>
+    <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+     
+    </StackLayout>
+  </ContentPage.Content>
 
- 
 </ContentPage>
