--- a/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
@@ -9,40 +9,69 @@
         <OnPlatform.Android>12</OnPlatform.Android>
         <OnPlatform.WinPhone>18</OnPlatform.WinPhone>
       </OnPlatform>
+
+      <Style x:Key="LoginButton" TargetType="Button">
+        <Setter Property="BackgroundColor" Value="#007acc"/>
+        <Setter Property="TextColor" Value="#F0F7FF" />
+        <Setter Property="BorderRadius" Value="0"/>
+        <Setter Property="FontSize" Value="16" />
+      </Style>
+      <Style x:Key="CredentialsEntry" TargetType ="Entry">
+        <Setter Property="BackgroundColor" Value="#F0F7FF"/>
+        <Setter Property="TextColor" Value="#130606"/>
+      </Style>
+
     </ResourceDictionary>
   </ContentPage.Resources>
-  
-  <ScrollView>
-    <StackLayout Padding="30" BackgroundColor="#222">
-      <Image Source="http://www.medexp.com.mx/Static/Imgs/logo.png"
+
+
+
+  <StackLayout Padding="0,0,0,5" Spacing="0" BackgroundColor="#222">
+    <StackLayout Spacing="10" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" >
+
+      <StackLayout Spacing="5">
+        <!--Image and Activity Indicator-->
+        <Image Source="http://www.medexp.com.mx/Static/Imgs/logo.png"
+           HorizontalOptions="CenterAndExpand"
+           VerticalOptions="Start"
+           MinimumHeightRequest="25"/>
+        <ActivityIndicator x:Name="waitActivityIndicator"
              HorizontalOptions="Center"
-             HeightRequest="180" />
-      <ActivityIndicator x:Name="waitActivityIndicator"
-                     HorizontalOptions="Center"
-                     VerticalOptions="Center"/>
-      <Label Text="Usuario"
-             TextColor="White" />
-      <Entry x:Name="Username"
-             BackgroundColor="#222"
-             TextColor="#fff"  />
-      <Label Text="Contraseña"
-             TextColor="White" />
-      <Entry x:Name="Password"
+             VerticalOptions="Center" HeightRequest="20" WidthRequest="20"/>
+      </StackLayout>
+
+      <StackLayout Padding="40,0,40,5">
+        <!--Entries and forget password-->
+        <Entry x:Name="Username"
+             Placeholder="Nombre de Usuario"
+             MinimumHeightRequest="22"
+             Style="{StaticResource CredentialsEntry}"/>
+        <Entry x:Name="Password"
+             Placeholder="Contraseña"
              IsPassword="True"
-             BackgroundColor="#222"
-             TextColor="#fff" />
-      <Button Text="¿Olvidaste tu contraseña?"
+             MinimumHeightRequest="22"
+             Style="{StaticResource CredentialsEntry}" />
+        <Button Text="¿Olvidaste tu contraseña?"
               TextColor="#3399CC"
               Clicked="ForgetPasswordMethod"
+              MinimumHeightRequest="22"
               BackgroundColor="Transparent"
               FontSize="12"
               HorizontalOptions="Start"/>
-      <Button Text="Iniciar Sesión"
-              HorizontalOptions="End"
+      </StackLayout>
+
+      <StackLayout Padding="90,0,90,0">
+        <!--LogInButton-->
+        <Button Text="Iniciar Sesión"
+              HorizontalOptions="Center"
               Clicked="SignInPressed"
-              BackgroundColor="#3399CC" />
-      <Button Text="Get User"
-              Clicked="GetUserPressed" />
+              MinimumHeightRequest="20"
+              Style="{StaticResource LoginButton}" />
+      </StackLayout>
+
+
+
+
     </StackLayout>
-  </ScrollView>
+  </StackLayout>
 </ContentPage>
